[gd_scene load_steps=15 format=3 uid="uid://bh7vlix0x2cxc"]

[ext_resource type="Script" uid="uid://ke11qpxkuxhb" path="res://scripts/game_manager.gd" id="1_2u4vx"]
[ext_resource type="Script" uid="uid://cbwem7ro7q515" path="res://scripts/click_manager.gd" id="3_click_manager"]
[ext_resource type="PackedScene" uid="uid://w6tsy7wijstg" path="res://scenes/clickable_cube.tscn" id="4_7pmop"]
[ext_resource type="PackedScene" uid="uid://dq0qrrxsaxj6j" path="res://scenes/clickable_sphere.tscn" id="4_453mu"]
[ext_resource type="Script" uid="uid://banudf2ijx7mn" path="res://scripts/ui_manager.gd" id="4_ui_manager"]
[ext_resource type="PackedScene" uid="uid://dilhedk42fiqg" path="res://scenes/user_interface.tscn" id="6_b26h7"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ih8ls"]
size = Vector3(10, 0.001, 10)

[sub_resource type="BoxMesh" id="BoxMesh_453mu"]
size = Vector3(10, 2, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_i8u74"]
custom_solver_bias = 1.0
size = Vector3(0.001, 10, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_453mu"]
size = Vector3(10, 10, 0.001)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7pmop"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.485703, 0.485704, 0.485703, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="Gradient" id="Gradient_b26h7"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a8wb5"]
gradient = SubResource("Gradient_b26h7")
fill = 1
fill_from = Vector2(0, 1)
fill_to = Vector2(1, 0.0042735)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b26h7"]
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="MainScreen" type="Node3D"]

[node name="Entities" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Cube" parent="Entities" instance=ExtResource("4_7pmop")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.597447, 0.9178, -0.0304158)

[node name="Sphere" parent="Entities" instance=ExtResource("4_453mu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.669778, 0.798294, 0)

[node name="Environment" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Floor" type="StaticBody3D" parent="Environment"]
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Environment/Floor"]
shape = SubResource("BoxShape3D_ih8ls")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Environment/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = SubResource("BoxMesh_453mu")

[node name="Walls-Invisible" type="StaticBody3D" parent="Environment"]
collision_layer = 4
collision_mask = 0

[node name="Right" type="CollisionShape3D" parent="Environment/Walls-Invisible"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 5, 0)
shape = SubResource("BoxShape3D_i8u74")

[node name="Left" type="CollisionShape3D" parent="Environment/Walls-Invisible"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 5, 0)
shape = SubResource("BoxShape3D_i8u74")

[node name="Back" type="CollisionShape3D" parent="Environment/Walls-Invisible"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, -5)
shape = SubResource("BoxShape3D_453mu")

[node name="Front" type="CollisionShape3D" parent="Environment/Walls-Invisible"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 5)
shape = SubResource("BoxShape3D_453mu")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.671721, 0.47618, -0.567489, 0, 0.766044, 0.642788, 0.740805, -0.431774, 0.514568, 0, 5, 0)

[node name="Camera" type="Camera3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0.298836, -0.640857, 0, 0.906308, 0.422618, 0.707107, -0.298836, 0.640857, -21.6585, 18.0606, 27.1507)
keep_aspect = 0
projection = 1
current = true
size = 30.0

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_2u4vx")

[node name="ClickManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_click_manager")

[node name="UserInterface" parent="." instance=ExtResource("6_b26h7")]

[node name="UIManager" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("4_ui_manager")

[node name="VSplitContainer" type="VSplitContainer" parent="UIManager"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 523.0
grow_vertical = 2
dragging_enabled = false

[node name="PanelContainer" type="PanelContainer" parent="UIManager/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_7pmop")

[node name="Money" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 16

[node name="MoneyLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer/Money"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "N/A"
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UIManager/VSplitContainer/PanelContainer/Money"]
layout_mode = 2
size_flags_horizontal = 8
texture = SubResource("GradientTexture2D_a8wb5")

[node name="PanelContainer2" type="PanelContainer" parent="UIManager/VSplitContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_b26h7")

[node name="TabContainer" type="TabContainer" parent="UIManager/VSplitContainer/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tab_alignment = 2
current_tab = 0

[node name="HorizontalSplit" type="VBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="EntityInfo" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="EntityInfoText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/EntityInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Entities:"

[node name="EntityCountLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/EntityInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "N/A"

[node name="EntityInfoLabelDivider" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/EntityInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "/"

[node name="EntityLimitLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/EntityInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "N/A"

[node name="ClickRadius" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="ClickRadiusText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickRadius"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Click Radius:"

[node name="ClickRadiusLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickRadius"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "N/A"

[node name="ClickRadiusButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickRadius"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "N/A"

[node name="ClickHoldEnable" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="ClickHoldEnableText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickHoldEnable"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Enable Click Holding:"

[node name="ClickHoldEnableButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickHoldEnable"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "N/A"

[node name="ClickHoldInterval" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="ClickHoldIntervalText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickHoldInterval"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Click Holding Interval:"

[node name="ClickHoldIntervalLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickHoldInterval"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "N/A"

[node name="ClickHoldIntervalButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickHoldInterval"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
disabled = true
text = "N/A"

[node name="AutoClickEnable" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="AutoClickEnableText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/AutoClickEnable"]
layout_mode = 2
text = "Enable Auto Clicking:"

[node name="AutoClickEnableButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/AutoClickEnable"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "N/A"

[node name="AutoClickInterval" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="AutoClickIntervalText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/AutoClickInterval"]
layout_mode = 2
text = "Auto Click Interval:"

[node name="AutoClickIntervalLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/AutoClickInterval"]
unique_name_in_owner = true
layout_mode = 2
text = "N/A"

[node name="AutoClickIntervalButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/AutoClickInterval"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
disabled = true
text = "N/A"

[node name="SpawnSphere" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="SpawnSphereText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/SpawnSphere"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Spawn a Sphere:"

[node name="SpawnSphereLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/SpawnSphere"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "N/A"

[node name="SpawnSphereButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/SpawnSphere"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "N/A"

[node name="IncreaseSphereReward" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="IncreaseSphereRewardText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreaseSphereReward"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Increase Sphere Value:"

[node name="IncreaseSphereRewardLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreaseSphereReward"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "N/A"

[node name="IncreaseSphereRewardButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreaseSphereReward"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "N/A"

[node name="SpawnCube" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="SpawnCubeText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/SpawnCube"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Spawn a Cube:"

[node name="SpawnCubeLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/SpawnCube"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "N/A"

[node name="SpawnCubeButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/SpawnCube"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "N/A"

[node name="IncreaseCubeReward" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="IncreaseCubeRewardText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreaseCubeReward"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Increase Cube Value:"

[node name="IncreaseCubeRewardLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreaseCubeReward"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "N/A"

[node name="IncreaseCubeRewardButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreaseCubeReward"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "N/A"

[node name="IncreasePlayArea" type="HBoxContainer" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit"]
layout_mode = 2

[node name="IncreasePlayAreaText" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreasePlayArea"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Increase Play Area:"

[node name="IncreasePlayAreaLabel" type="Label" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreasePlayArea"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "N/A"

[node name="IncreasePlayAreaButton" type="Button" parent="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreasePlayArea"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "N/A"

[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickRadius/ClickRadiusButton" to="UIManager" method="_on_click_radius_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickHoldEnable/ClickHoldEnableButton" to="UIManager" method="_on_click_hold_enable_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/ClickHoldInterval/ClickHoldIntervalButton" to="UIManager" method="_on_click_hold_interval_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/AutoClickEnable/AutoClickEnableButton" to="UIManager" method="_on_auto_click_enable_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/AutoClickInterval/AutoClickIntervalButton" to="UIManager" method="_on_auto_click_interval_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/SpawnSphere/SpawnSphereButton" to="UIManager" method="_on_spawn_sphere_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreaseSphereReward/IncreaseSphereRewardButton" to="UIManager" method="_on_increase_sphere_value_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/SpawnCube/SpawnCubeButton" to="UIManager" method="_on_spawn_cube_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreaseCubeReward/IncreaseCubeRewardButton" to="UIManager" method="_on_increase_cube_reward_button_pressed"]
[connection signal="pressed" from="UIManager/VSplitContainer/PanelContainer2/TabContainer/HorizontalSplit/IncreasePlayArea/IncreasePlayAreaButton" to="UIManager" method="_on_increase_play_area_button_pressed"]
